<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:orientation="vertical"
    tools:context=".SignIn">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="85dp"
        android:text="@string/avt"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp">
</LinearLayout>
    <EditText
        android:id="@+id/login"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:background="@drawable/butl"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/login"
         android:paddingLeft="15dp"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textColorHint="@color/white"
        android:id="@+id/password"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:background="@drawable/butl"
        android:hint="@string/passward"
        android:paddingLeft="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/s_l"
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="handler"
        android:text="@string/save_load_b"
        android:textAllCaps="false" />
    <Button
        android:id="@+id/sign"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="nextb"
        android:text="@string/signin"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/save_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savelog"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="60dp">

    </TextView>
    <TextView
        android:id="@+id/save_password"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/savepass"
        android:textSize="25sp"
        android:gravity="center">
    </TextView>

</LinearLayout>