<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".AddMessage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:text="Кому вы хотите отправить SMS?"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />
    <RadioButton
        android:id="@+id/p1"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:buttonTint="@color/white"
        android:text="@string/person1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
       android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/p2"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:buttonTint="@color/white"
        android:text="@string/person2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/p3"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:buttonTint="@color/white"
        android:text="@string/person3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/p4"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:buttonTint="@color/white"
        android:text="@string/person4"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/p5"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:buttonTint="@color/white"
        android:text="@string/person5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/mess"
        android:layout_width="328dp"
        android:layout_height="66dp"
        android:fontFamily="sans-serif"
        android:text="Напишите SMS:"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />
    <EditText
        android:id="@+id/message"
        android:layout_width="326dp"
        android:layout_height="103dp"
        android:background="@drawable/butl"
        android:fontFamily="sans-serif"
        android:layout_marginTop="30dp"
        android:text=""
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <Button
        android:id="@+id/go"
        android:layout_width="192dp"
        android:layout_height="47dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/butl"
        android:fontFamily="sans-serif"
        android:onClick="tores"
        android:text="Далее"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

</LinearLayout>